# udukoresho

./: README.md  __init__.py  pyproject.toml  utils.py
src/udukoresho/: __init__.py
tests/: wsp.ipynb
