[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "udukoresho"
version = "0.0.1"
authors = [
  { name="Vany V. Ingenzi", email="ingenzivany@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "matplotlib"
]